# Funtal

./: .gitignore  .gitmodules  CMakeLists.txt  Funtal.sln  README.md  premake5.lua
Engine/src/: Funtal.h  Test.cpp  Test.h
Engine/src/Funtal/: Application.cpp  Application.h  Core.h  EntryPoint.h
Funtal/: Funtal.vcxproj  Funtal.vcxproj.filters
Funtal/lib/: libfuntal.dylib
Funtal/src/: Funtal.h  Test.cpp  Test.h  ftpch.cpp  ftpch.h
Funtal/src/Funtal/: Application.cpp  Application.h  Core.cpp  Core.h  EntryPoint.h  Input.cpp  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtonCodes.h  Window.h
Funtal/src/Funtal/Events/: Application.h  ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Funtal/src/Funtal/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Funtal/src/Funtal/Imgui/: ImGuiLayer.cpp  ImGuiLayer.h
Funtal/src/Funtal/Renderer/: GraphicsContext.h
Logs/Manual/: bin_20230606_1440.txt
Platform/OpenGL/: ImGuiOpenGLRenderer.cpp  OpenGLContext.cpp  OpenGLContext.h
Platform/Unix/: macOSInput.cpp  macOSInput.h  macOSWindow.cpp  macOSWindow.h
Platform/Windows/: WindowsWindow.cpp  WindowsWindow.h
Platform/macOS/: macOSWindow.cpp
Sandbox/: Application.cpp  Sandbox.vcxproj  SandboxApp.cpp
Sandbox/src/: SandboxApp.cpp
lib/Funtal/: libfuntal.dylib
